k8s/innovatech-deploy.yaml
# 1. MICROSERVICIO DE DESPACHOS (Backend)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: despachos-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: despachos
  template:
    metadata:
      labels:
        app: despachos
    spec:
      containers:
      - name: despachos-container
        image: 113200091726.dkr.ecr.us-east-1.amazonaws.com/innovatech-backend-despachos:latest
        ports:
        - containerPort: 8091
        resources:
          requests:
            cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: despachos-service
spec:
  selector:
    app: despachos
  ports:
    - protocol: TCP
      port: 8091
      targetPort: 8091
  type: ClusterIP # Solo accesible internamente por el clúster

---
# 2. MICROSERVICIO DE VENTAS (Backend)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ventas-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ventas
  template:
    metadata:
      labels:
        app: ventas
    spec:
      containers:
      - name: ventas-container
        image: 113200091726.dkr.ecr.us-east-1.amazonaws.com/innovatech-backend-ventas:latest
        ports:
        - containerPort: 8092
        resources:
          requests:
            cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: ventas-service
spec:
  selector:
    app: ventas
  ports:
    - protocol: TCP
      port: 8092
      targetPort: 8092
  type: ClusterIP # Solo accesible internamente por el clúster

---
# 3. FRONTEND (Con Load Balancer Público)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend-container
        image: 113200091726.dkr.ecr.us-east-1.amazonaws.com/innovatech-frontend:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer # ¡Esto le dice a AWS que cree una URL pública!
