k8s/innovatech-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: innovatech-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: despachos-service
            port:
              number: 8091
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80 # O el puerto de tu frontend
